#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

RH-2011-04-11-0: Cleanup:     cleanup

RH-2011-04-06-0: Enhancem.    Fedora 14 compilation fix

RC-2011-04-05-0: Cleanup:     more cleanups

RH-2011-04-03-0: Enhancem.    lock cleanup         

-------------------------------------------------------------------------------

RH-2011-04-01-0: CVS:         OGS 6.2u5p2

RC-2011-03-27-0: Cleanup:     more cleanups

RC-2011-03-22-0: Bugfix:      Perl jsv throws error if job argument contains
                              comma
                 Issue:       3266

RC-2011-03-19-0: Cleanup:     misc. cleanup

RH-2011-03-18-0: Bugfix:      jsv logging does not work when multiple users
                              submit jobs on same submit host
                 Issue:       3228

RH-2011-03-14-1: Bugfix:      free()-hook for glibc is also needed in our 
                              jemalloc library
                              (merged from Mozilla 493541 & SGE SH-2010-01-05-1)

RH-2011-03-14-0: Bugfix:      rerun of a tightly integrated parallel job crashes
                              qmaster after restart
                              (merged from JG-2009-12-28-0)
                 Bugster:     6912529
                 Issue:       3216
                 Review:      HP

RH-2011-03-08-0: Cleanup:     LINUX Macro
                 Review:      RC

RH-2011-03-07-0: Enhancem.    checkin the S/390 port done by Rayson Ho
                              and Uriel Carrasquilla
                              (based on RC-2011-02-25)
                 Review:      RC
